Data from https://govote.ng/ && getLgaSubAreas

--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "Geo",
     "data",
     "Geo",
-    "information"
+    "information",
+    "Local Government",
+    "Nodejs",
+    "Capital",
+    "City",
+    "Lga",
+    "Local-government"
   ],
   "author": "Usman Ayobami",
   "license": "ISC",
